--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,10 @@
     "framer-motion": "^12.23.12",
     "ioredis": "^5.7.0",
     "lucide-react": "^0.536.0",
-    "next": "15.4.6",
+    "next": "^16.0.10",
     "next-themes": "^0.4.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
